--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <div class="toggle-container">
         <label for="coordinateToggle">Show Coordinates:</label>
-        <input type="checkbox" id="coordinateToggle" checked>
+        <input type="checkbox" id="coordinateToggle" unchecked>
     </div>
     <main class="white-oriented">
         <div id="infoPanel">
@@ -35,9 +35,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
     <script src="libs/chessboardjs/chessboard.js"></script>
     <script src="scripts/main.js"></script>
-    
-
-
 
 </body>
 </html>
