--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <link href="libs/chessboardjs/chessboard.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -22,8 +21,8 @@
     <main class="white-oriented">
         <div id="infoPanel">
             <p><strong>Board Orientation:</strong> <span id="boardOrientation">White</span></p>
-            <p><strong>Current Level:</strong> <span id="currentLevel">Full</span></p>
-            <p><strong>User Prompt:</strong> <span id="userPrompt">Enter your move</span></p>
+            <p><strong><span id="currentLevel">:</strong> <span id="currentMode">Full</span></p>
+            <span id="userPrompt">Enter your move</span></p>
         </div>
         <div id="board"></div>
         <div id="progressBarContainer">
