--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 
     <main class="white-oriented">
         <div id="infoPanel">
+            <h1><strong>Level <span id="levelCounterElement"></strong></h1>
+            <p><span id="levelNameElement">Full</span></h1>
             <p><strong>Board Orientation:</strong> <span id="boardOrientation">White</span></p>
-            <!-- <p><strong><span id="currentLevel">:</strong> <span id="currentMode">Full</span></p> -->
         </div>
         <div id="board"></div>
         <div id="progressBarContainer">
