--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="menuScreen">
         <div id="menuContent">
           <h1>eFour Spatial Trainer</h1>
-          <p>Play daily to improve your spatial awareness and notation skills.</p>
+          <p>Play once per day to improve your spatial awareness and notation skills.</p>
           <button id="startButton">Start Game</button>
         </div>
       </div>
@@ -60,7 +60,7 @@
     <script src="libs/chessboard-arrows-master/chessboard-arrows.js"></script>
     <script src="scripts/commonFunctions.js"></script>
     <script src="scripts/initBoard.js"></script>
-    <script src="scripts/gameCoordinateTraining.js"></script>
+    <script src="scripts/gameModes.js"></script>
     <script src="scripts/main.js"></script>
     
 
